--- a/src/明源整体解决方案/MySoft.Project.Core/Entity/EntityTemplate.tt
+++ b/src/明源整体解决方案/MySoft.Project.Core/Entity/EntityTemplate.tt
@@ -115,7 +115,7 @@ namespace <#= nameSpace #>
         {
 		
 			if(row1["COLUMN_DEFAULT"]!=DBNull.Value)
-            defValDict[row1["COLUMN_NAME"].ToString()] =row1["COLUMN_DEFAULT"].ToString().Replace("((", "").Replace("))", "");
+            defValDict[row1["COLUMN_NAME"].ToString()] =row1["COLUMN_DEFAULT"].ToString().Replace("((", "").Replace("))", "").Replace("'", "");
 			var len= row1["MAX_LENTH"];
 			if(len!=DBNull.Value)
 				lenDict[row1["COLUMN_NAME"].ToString()]=Convert.ToInt32(len);
